Atiras kesz (version 1)

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -6,3 +6,6 @@
 /HoseCounter.class
 /skeleton.class
 /AssignHoseEndsToPollens.class
+/utility/
+/AssignhoseEndsToPollens.class
+/HoseLengthMeasure.class
